--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ carpentry: "swc"
 title: "Workshop Title"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: anelda@talarify.co.za
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
